include/my_time.h
@@ -38,7 +38,10 @@ typedef long my_time_t;
 #define MY_TIME_T_MAX LONG_MAX
 #define MY_TIME_T_MIN LONG_MIN
 
+/* two-digit years < this are 20..; >= this are 19.. */
 #define YY_PART_YEAR	   70
+/* apply above magic to years < this */
+#define YY_MAGIC_BELOW     200
 
 /* Flags to str_to_datetime */
 #define TIME_FUZZY_DATE		1
